--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </a>
           </div>
           <div class="news-preview">
-            <a href="news2.html" class="news_blocks">
+            <a href="news2 class="news_blocks">
               <div class="image">
                 <img src="test.jfif" alt="News Image 2">
               </div>
